--- a/its-gateway/package.json
+++ b/its-gateway/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/microservices": "^11.1.2",
+    "@nestjs/microservices": "^11.1.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.4.7",
     "joi": "^17.13.3",
     "passport": "^0.7.0",
@@ -45,7 +48,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.15.34",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
