--- a/its-users/package.json
+++ b/its-users/package.json
@@ -21,11 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.1.2",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
